[package]
name = "normalize-facts-rules-interpret"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Interpreted Datalog rule evaluation for normalize code facts"

[features]
# Enable JIT compilation in ascent-interpreter (x86_64-only).
# ascent-interpreter 0.1.4 properly guards the JIT asm module with
# #[cfg(target_arch = "x86_64")] so enabling this on all platforms is safe;
# the JIT call sites in lib.rs are also gated on cfg(target_arch = "x86_64").
default = []
# JIT disabled: ascent-interpreter 0.1.5 has a packed-tuple arity mismatch bug
# in specialized.rs that causes abort on non-trivial relations. Re-enable once fixed.
jit = ["ascent-interpreter/jit-asm"]

[dependencies]
normalize-facts-rules-api = { path = "../normalize-facts-rules-api", version = "0.2.0" }
normalize-core = { path = "../normalize-core", version = "0.2.0" }
normalize-rules-config = { path = "../normalize-rules-config", version = "0.2.0" }
ascent-interpreter.workspace = true
syn = { version = "2.0", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
glob = "0.3.3"
dirs = "5"
schemars = "1"
tracing = "0.1"
