[package]
name = "normalize-facts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code fact extraction and storage library"

[[bin]]
name = "normalize-facts"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:server-less", "dep:tokio", "dep:schemars", "dep:normalize-output"]

[dependencies]
server-less = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
serde_json = { workspace = true }
schemars = { version = "1", optional = true }
normalize-output = { path = "../normalize-output", version = "0.2.0", optional = true }
# Core types
normalize-facts-core = { path = "../normalize-facts-core", version = "0.2.0" }
normalize-languages = { path = "../normalize-languages", version = "0.2.0" }
normalize-local-deps = { path = "../normalize-local-deps", version = "0.2.0" }

# Parsing
tree-sitter = "0.26"
streaming-iterator = "0.1"

# Database
libsql.workspace = true

# File system
ignore.workspace = true
dirs = "5"

# Parallelism
rayon.workspace = true

# Progress reporting
indicatif.workspace = true

# Serialization
serde.workspace = true

[dev-dependencies]
normalize-manifest = { path = "../normalize-manifest", version = "0.2.0" }
tempfile = "3"
tokio = { workspace = true }
