[package]
name = "normalize-facts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code fact extraction and storage library"

[[bin]]
name = "normalize-facts"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:server-less", "dep:schemars", "dep:normalize-output", "dep:toml"]

[dependencies]
server-less = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
tokio = { workspace = true }
serde_json = { workspace = true }
schemars = { version = "1", optional = true }
normalize-output = { path = "../normalize-output", version = "0.3.2", optional = true }
# Core types
normalize-facts-core = { path = "../normalize-facts-core", version = "0.3.2" }
normalize-rules-config = { path = "../normalize-rules-config", version = "0.3.2" }
normalize-languages = { path = "../normalize-languages", version = "0.3.2" }
normalize-local-deps = { path = "../normalize-local-deps", version = "0.3.2" }
normalize-cfg = { path = "../normalize-cfg", version = "0.3.2", default-features = false }

# Parsing
tree-sitter = "0.26"
streaming-iterator = "0.1"

# Git history (for co-change edge index)
gix = { workspace = true }

# Database
libsql.workspace = true

# File system
ignore.workspace = true
dirs = "5"

# Parallelism
rayon.workspace = true

# Progress reporting
indicatif.workspace = true

# Content-addressed extraction cache (inlined from normalize-ca-cache)
blake3.workspace = true
bincode.workspace = true

# Observability
tracing = "0.1"

# Serialization
serde.workspace = true

[dev-dependencies]
normalize-manifest = { path = "../normalize-manifest", version = "0.3.2" }
tempfile = "3"
tokio = { workspace = true }
