[package]
name = "normalize-facts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code fact extraction and storage library"

[[bin]]
name = "normalize-facts"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:server-less", "dep:schemars", "dep:normalize-output", "dep:normalize-filter", "dep:normalize-config-paths"]

# Opt-in remote/replicated libsql. normalize uses only local databases
# (Builder::new_local / :memory:), so the stock build ships libsql `core` only.
# Enabling this restores libsql's default remote stack (tonic, tonic-web,
# libsql_replication + the transitive duplicate axum 0.6/hyper 0.14). This is a
# capability surface, default OFF: name is public API and adjustable.
remote-sqld = ["libsql/replication", "libsql/remote", "libsql/sync", "libsql/tls"]

[dependencies]
server-less = { workspace = true, optional = true }
normalize-config-paths = { path = "../normalize-config-paths", version = "0.3.2", optional = true }
tokio = { workspace = true }
serde_json = { workspace = true }
schemars = { version = "1", optional = true }
normalize-output = { path = "../normalize-output", version = "0.3.2", optional = true }
normalize-filter = { path = "../normalize-filter", version = "0.3.2", optional = true }
# Core types
normalize-facts-core = { path = "../normalize-facts-core", version = "0.3.2" }
normalize-rules-config = { path = "../normalize-rules-config", version = "0.3.2" }
normalize-languages = { path = "../normalize-languages", version = "0.3.2" }
normalize-local-deps = { path = "../normalize-local-deps", version = "0.3.2" }
normalize-cfg = { path = "../normalize-cfg", version = "0.3.2", default-features = false }

# Parsing
tree-sitter = "0.26"
streaming-iterator = "0.1"

# Git history (for co-change edge index)
gix = { workspace = true }
normalize-git = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Database
libsql.workspace = true

# File system
ignore.workspace = true
dirs = "5"

# Parallelism
rayon.workspace = true

# Progress reporting
indicatif.workspace = true

# Content-addressed extraction cache (inlined from normalize-ca-cache)
blake3.workspace = true
bincode.workspace = true

# Observability
tracing = "0.1"

# Serialization
serde.workspace = true

[dev-dependencies]
normalize-manifest = { path = "../normalize-manifest", version = "0.3.2" }
tempfile = "3"
tokio = { workspace = true }
