[package]
name = "normalize-filter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "File filtering with glob patterns and alias resolution for normalize"

[features]
default = []
# Enable Merge + JsonSchema derives for config integration
config = ["dep:normalize-core", "dep:normalize-derive", "dep:schemars"]

[dependencies]
ignore = "0.4"
serde = { version = "1", features = ["derive"] }

# Optional config integration deps
normalize-core = { path = "../normalize-core", version = "0.1.0", optional = true }
normalize-derive = { path = "../normalize-derive", version = "0.1.0", optional = true }
schemars = { version = "1", optional = true }
