[package]
name = "normalize-filter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "File filtering with glob patterns and alias resolution for normalize"

[[bin]]
name = "normalize-filter"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
# Enable Merge + JsonSchema derives for config integration
config = ["dep:normalize-core", "dep:schemars"]
# Standalone CLI binary (server-less; clap re-exported from server-less)
cli = [
    "dep:server-less",
    "dep:schemars",
    "dep:serde_json",
    "dep:tokio",
    "dep:toml",
    "dep:normalize-languages",
]

[dependencies]
ignore = "0.4"
normalize-language-meta = { path = "../normalize-language-meta", version = "0.3.2" }
normalize-output = { path = "../normalize-output", version = "0.3.2" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

# Optional config integration deps
normalize-core = { path = "../normalize-core", version = "0.3.2", optional = true }
schemars = { version = "1", optional = true }
server-less = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
# CLI-only: config-slice loading + project language detection for @-alias resolution
toml = { workspace = true, optional = true }
normalize-languages = { path = "../normalize-languages", version = "0.3.2", optional = true }
