[package]
name = "normalize-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure graph algorithms for normalize: SCC, bridges, diamonds, chains, transitive edges"

[features]
default = []
# CLI surface: the `graph` verb (module/symbol/type graph analysis, dependents,
# import-path) — report structs, `OutputFormatter` impls, index acquisition, and
# the server-less `GraphService`. Library consumers who only want the pure graph
# algorithms build with `default-features = false`.
cli = [
    "dep:server-less",
    "dep:normalize-index",
    "dep:normalize-rules-config",
    "dep:normalize-languages",
    "dep:normalize-output",
    "dep:normalize-config-paths",
    "dep:libsql",
    "dep:nu-ansi-term",
]

[dependencies]
serde = { workspace = true }
schemars = "1"

# cli-only dependencies
normalize-index = { path = "../normalize-index", version = "0.3.2", optional = true }
normalize-rules-config = { path = "../normalize-rules-config", version = "0.3.2", optional = true }
normalize-languages = { path = "../normalize-languages", version = "0.3.2", optional = true }
normalize-output = { path = "../normalize-output", version = "0.3.2", optional = true }
normalize-config-paths = { path = "../normalize-config-paths", version = "0.3.2", optional = true }
libsql = { workspace = true, optional = true }
nu-ansi-term = { version = "0.50", optional = true }
server-less = { workspace = true, optional = true }
